<resources>
    <string name="app_name">APPGestionTareas</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="btnHorario">Horario</string>
    <string name="btnReportes">Reportes</string>
    <string name="btnBienestar">Bienestar</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="t_tulo">Título</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="planificaci_n">Planificación</string>
    <string name="crear_actividad">Crear Actividad</string>
    <string name="dar_tiempo">Dar Tiempo</string>
    <string name="tarea">Tarea</string>
    <string name="examen">Examen</string>
    <string name="ajustes">Ajustes</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="idioma">Idioma</string>
    <string name="guardar">Guardar</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="bienestar">Bienestar</string>
    <string name="estado_de_nimo">Estado de ánimo</string>
    <string name="horas_de_sue_o">Horas de sueño</string>
    <string name="notas_opcional">Notas (Opcional)</string>
    <string name="enviar">Enviar</string>
    <string name="creaci_n_de_actividad">Creación de Actividad</string>
    <string name="fecha_de_asignaci_n">Fecha de asignación</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="fecha_de_entrega">Fecha de entrega</string>
    <string name="titulo">Titulo</string>
    <string name="crear">Crear</string>
    <string name="pantalla_de_calendario">Pantalla de Calendario</string>
    <string name="historial_de_actividad">Historial de actividad</string>
    <string name="temporal">temporal</string>
    <string name="horario">HORARIO</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="x">X</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="dar">Dar</string>
    <string name="liberar">Liberar</string>
    <string name="profesor_opcional">Profesor (Opcional)</string>
    <string name="tiempo_libre">Tiempo libre: --</string>
    <string name="tiempo">Tiempo</string>
    <string name="confirmar">Confirmar</string>
    <string name="tiempo_estimado_h">Tiempo estimado (H)</string>
</resources>