<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.FollowUpFragment">

    <TextView
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/seguimiento"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <ImageButton
        android:id="@+id/ajustesBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_settings"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/btnReportes"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/btn_redondo"
        android:elevation="6dp"
        android:text="@string/btnReportes"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnHorario"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/btn_redondo"
        android:elevation="6dp"
        android:text="@string/btnHorario"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnReportes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBienestar"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/btn_redondo"
        android:elevation="6dp"
        android:text="@string/btnBienestar"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnHorario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
